<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:keepScreenOn="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/list_item_peer_screen"
        app:spanCount="2"
        android:isScrollContainer="true"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/statStreamTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workshop_start_soon"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/size_16"
        android:layout_marginEnd="@dimen/size_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/userCountLayout"
        android:layout_width="@dimen/size_48"
        android:layout_height="@dimen/size_48"
        android:layout_marginEnd="@dimen/size_24"
        android:layout_marginTop="@dimen/size_24"
        android:background="@drawable/bg_user_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/chatImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_ls_chat"
            android:contentDescription="@string/live_user_count"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:id="@+id/countTextView"
            android:layout_width="@dimen/size_22"
            android:layout_height="@dimen/size_22"
            tools:text="8"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/font_10"
            android:background="@drawable/bg_live_circle"
            android:layout_marginTop="@dimen/size_6"
            android:layout_marginEnd="@dimen/size_6"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55"
        />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/chatFragmentContainerView"
        android:name="com.learnapp.livestream.ui.player.fragment.ChatFragment"
        android:layout_width="@dimen/size_0"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@id/verticalGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/connectivityTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/no_connection"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="@color/white"
        android:background="@color/raisin_black"
        android:textSize="@dimen/font_12"
        android:paddingTop="@dimen/size_2"
        android:paddingBottom="@dimen/size_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/networkStatusImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:srcCompat="@drawable/ic_network_status_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/size_8"
        android:layout_marginBottom="@dimen/size_18"
        android:contentDescription="@string/connection_status" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/viewGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="userCountLayout, chatFragmentContainerView"
        />

</androidx.constraintlayout.widget.ConstraintLayout>